Re-number windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,9 @@ bind c new-window -c "#{pane_current_path}"
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Automatically renumber the windows of a session
+set-option -g renumber-windows on
+
 # Status bar
 set-option -g status-position top
 set -g status-justify centre
