--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set -g status-fg white
 set -g window-status-current-bg colour6
 set -g window-status-current-fg black
 set -g status-left "#[fg=black,bg=colour6][#S]"
-set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6]%l:%M %p | %Y-%m-%d"
+set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6]%a %b %d %l:%M %p"
 set -g @prefix_highlight_bg default
 
 # Make active pane border blue
