Add battery, remove resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set -g status-fg white
 set -g window-status-current-bg colour6
 set -g window-status-current-fg black
 set -g status-left "#[fg=black,bg=colour6][#S]"
-set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6]%a %b %d %l:%M %p"
+set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6]%a %b %d %l:%M %p #{battery_percentage}"
 set -g @prefix_highlight_bg default
 
 # Make active pane border blue
@@ -57,9 +57,9 @@ unbind -T copy-mode-vi Enter
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 
 # Plugins
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
