Beautify status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,9 +14,6 @@ set -g history-limit 100000
 # Enable mouse mode
 set -g mouse on
 
-# New windows in current directory
-bind c new-window -c "#{pane_current_path}"
-
 # Start windows and panes at 1
 set -g base-index 1
 setw -g pane-base-index 1
@@ -24,17 +21,35 @@ setw -g pane-base-index 1
 # Automatically renumber the windows of a session
 set-option -g renumber-windows on
 
-# Status bar
+# Open new windows in current directory
+bind c new-window -c "#{pane_current_path}"
+
+# Status position
 set-option -g status-position top
-set -g status-justify centre
-set -g status-bg colour236
-set -g status-fg white
-set -g window-status-current-bg colour6
-set -g window-status-current-fg black
+
+# Status bar color
+set-option -g status-bg colour236
+set-option -g status-fg white
+
+# Window status
+set-option -g window-status-format "#[fg=white,bg=colour240] #I:#W "
+set-option -g window-status-current-format "#[fg=black,bg=colour6] #I:#W "
+set-option -g window-status-separator " "
+set-option -g status-justify centre
+
+# Left side of status bar
 set -g status-left "#[fg=black,bg=colour6][#S]"
-set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6]%a %b %d %I:%M %p #{battery_percentage}"
-set -g pane-active-border-fg colour6
+
+# Right side of status bar
+set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6][%a %b %d]#[bg=colour236] #[fg=black,bg=colour6][%I:%M %p]#[bg=colour236] #[fg=black,bg=colour6][#{battery_percentage}]"
+
+# tmux-prefix-highlight
 set -g @prefix_highlight_bg default
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+
+# Pane border
+set -g pane-active-border-fg colour6
 
 # Split panes
 unbind %
