--- a/tmux.conf
+++ b/tmux.conf
@@ -41,7 +41,7 @@ set-option -g status-justify centre
 set -g status-left "#[fg=black,bg=colour6][#S]"
 
 # Right side of status bar
-set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6][%a %b %d]#[bg=colour236] #[fg=black,bg=colour6][%I:%M %p]#[bg=colour236] #[fg=black,bg=colour6][#{battery_percentage}]"
+set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6] %a %b %d #[bg=colour236] #[fg=black,bg=colour6] %I:%M %p #[bg=colour236] #[fg=black,bg=colour6] #{battery_percentage} "
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
