Add battery string, remove redundant fg

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,19 +29,19 @@ set-option -g status-position top
 
 # Status bar color
 set-option -g status-bg colour236
-set-option -g status-fg white
+set-option -g status-fg black
 
 # Window status
 set-option -g window-status-format "#[fg=white,bg=colour240] #I:#W "
-set-option -g window-status-current-format "#[fg=black,bg=colour6] #I:#W "
+set-option -g window-status-current-format "#[bg=colour6] #I:#W "
 set-option -g window-status-separator " "
 set-option -g status-justify centre
 
 # Left side of status bar
-set -g status-left "#[fg=black,bg=colour6][#S]"
+set -g status-left "#[bg=colour6] [#S] "
 
 # Right side of status bar
-set -g status-right "#{prefix_highlight}#[fg=black,bg=colour6] %a %b %d #[bg=colour236] #[fg=black,bg=colour6] %I:%M %p #[bg=colour236] #[fg=black,bg=colour6] #{battery_percentage} "
+set -g status-right "#{prefix_highlight}#[bg=colour6] %a %b %d #[bg=colour236] #[bg=colour6] %I:%M %p #[bg=colour236] #[bg=colour6] Batt: #{battery_percentage} "
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
