Change foreground of window status format

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,7 @@ set-option -g status-bg colour236
 set-option -g status-fg black
 
 # Window status
-set-option -g window-status-format "#[fg=white,bg=colour240] #I:#W "
+set-option -g window-status-format "#[fg=colour250,bg=colour240] #I:#W "
 set-option -g window-status-current-format "#[bg=colour6] #I:#W "
 set-option -g window-status-separator " "
 set-option -g status-justify centre
