Update status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,19 +29,19 @@ set-option -g status-position top
 
 # Status bar color
 set-option -g status-bg colour236
-set-option -g status-fg black
+set-option -g status-fg colour253
 
 # Window status
-set-option -g window-status-format "#[fg=colour250,bg=colour240] #I:#W "
-set-option -g window-status-current-format "#[bg=colour6] #I:#W "
+set-option -g window-status-format "#[bg=colour240] #I:#W "
+set-option -g window-status-current-format "#[fg=black,bg=colour6] #I:#W "
 set-option -g window-status-separator " "
 set-option -g status-justify centre
 
 # Left side of status bar
-set -g status-left "#[bg=colour6] [#S] "
+set -g status-left "#[bg=colour240] [#S] "
 
 # Right side of status bar
-set -g status-right "#{prefix_highlight}#[bg=colour6] %a %b %d #[bg=colour236] #[bg=colour6] %I:%M %p #[bg=colour236] #[bg=colour6] Batt #{battery_percentage} "
+set -g status-right "#{prefix_highlight}#[bg=colour240] %a %b %d #[bg=colour236] #[bg=colour240] %I:%M %p #[bg=colour236] #[bg=colour240] Batt #{battery_percentage} "
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
