Add ruby and node version to status left

--- a/tmux.conf
+++ b/tmux.conf
@@ -38,7 +38,8 @@ set-option -g window-status-separator " "
 set-option -g status-justify centre
 
 # Left side of status bar
-set -g status-left "#[bg=colour240] [#S] "
+set -g status-left-length 50
+set -g status-left "#[bg=colour240] Session #S #[bg=colour236] #[bg=colour240] ruby #(ruby -v | awk '{print substr($2,0,5)}') #[bg=colour236] #[bg=colour240] node #(node --version) "
 
 # Right side of status bar
 set -g status-right "#{prefix_highlight}#[bg=colour240] %a %b %d #[bg=colour236] #[bg=colour240] %I:%M %p #[bg=colour236] #[bg=colour240] Batt #{battery_percentage} "
