Change status foreground color to white

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ set-option -g status-position top
 
 # Status bar color
 set-option -g status-bg colour236
-set-option -g status-fg colour253
+set-option -g status-fg white
 
 # Window status
 set-option -g window-status-format "#[bg=colour240] #I:#W "
