--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ set-option -g status-justify centre
 
 # Left side of status bar
 set -g status-left-length 50
-set -g status-left "#[bg=colour240] Session #S #[bg=colour236] #[bg=colour240] ruby #(ruby -v | awk '{print substr($2,0,5)}') #[bg=colour236] #[bg=colour240] node #(node --version) "
+set -g status-left "#[bg=colour240] Session #S #[bg=colour236] #[bg=colour240] #(rvm current) #[bg=colour236] #[bg=colour240] node #(node --version) "
 
 # Right side of status bar
 set -g status-right "#{prefix_highlight}#[bg=colour240] %a %b %d #[bg=colour236] #[bg=colour240] %I:%M %p #[bg=colour236] #[bg=colour240] Batt #{battery_percentage} "
