--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
 
 # Pane border
+set -g pane-border-fg colour240
 set -g pane-active-border-fg colour6
 
 # Split panes
