Reattach-to-user-namespace

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,17 +59,23 @@ bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 
+# Configure the default shell
+set -g default-shell $SHELL
+
+# Override the default command to use `reattach-to-user-namespace` for everything
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
 # Use vi(m) key bindings
 setw -g mode-keys vi
 set -g status-keys vi
 
 # Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-battery'
