--- a/iTerm2/com.googlecode.iterm2.plist
+++ b/iTerm2/com.googlecode.iterm2.plist
@@ -1624,17 +1624,17 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>284 149 934 77 0 0 1440 900 </string>
+	<string>312 941 934 77 -241 900 1920 1080 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
 	<string>410 381 620 392 0 0 1440 900 </string>
 	<key>NSWindow Frame SessionsPreferences</key>
-	<string>171 92 606 469 0 0 1440 900 </string>
+	<string>28 1030 606 469 -241 900 1920 1080 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>256 1413 918 512 -241 900 1920 1057 </string>
+	<string>255 1496 918 404 -241 900 1920 1080 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>99 294 592 584 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>-77 1054 1399 877 -241 900 1920 1057 </string>
+	<string>-109 922 1399 877 -241 900 1920 1080 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>41 0 1399 877 0 0 1440 877 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -2311,7 +2311,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Iosevka-Term-Medium 16</string>
+			<string>Iosevka-Term 16</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prevent Opening in a Tab</key>
@@ -2478,7 +2478,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2018-09-26T15:43:12Z</date>
+	<date>2018-10-05T05:28:22Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
