Add source config binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,10 @@ set -g repeat-time 1000
 # Increase scrollback buffer size
 set -g history-limit 100000
 
+# Source config binding
+unbind r
+bind r source-file ~/.tmux.conf
+
 # Enable mouse mode
 set -g mouse on
 
