Add CPU and memory usage to Tmux status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,11 +42,15 @@ set-option -g window-status-separator " "
 set-option -g status-justify centre
 
 # Left side of status bar
-set -g status-left-length 50
-set -g status-left " Session #S / #(rvm current) / node #(node --version) "
+set -g status-left-length 40 # default is 30
+set -g status-left " Sess: #S / CPU: #{sysstat_cpu} / Mem: #{sysstat_mem} "
 
 # Right side of status bar
-set -g status-right "#{prefix_highlight}%a %b %d / %I:%M %p / Batt #{battery_percentage} "
+set -g status-right "#{prefix_highlight}%a %b %d / %I:%M %p / Batt: #{battery_percentage} "
+
+# System stats config
+set -g @sysstat_cpu_view_tmpl "#{cpu.pused}"
+set -g @sysstat_mem_view_tmpl "#{mem.pused}"
 
 # tmux-prefix-highlight
 set -g @prefix_highlight_bg default
@@ -82,6 +86,7 @@ bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namesp
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 # Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
