--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,9 @@
 # Improve color
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-overrides ",*:Tc"
 
 # Address vim mode switching delay
 set -sg escape-time 0
-
-# Don't send prefix-key within 1 second (default is 500 ms)
-set -g repeat-time 1000
 
 # Increase scrollback buffer size
 set -g history-limit 100000
@@ -21,41 +18,22 @@ set -g mouse on
 # Start windows and panes at 1
 set -g base-index 1
 setw -g pane-base-index 1
-
-# Automatically renumber the windows of a session
 set-option -g renumber-windows on
 
 # Open new windows in current directory
 bind c new-window -c "#{pane_current_path}"
 
-# Status position
+# Status bar configuration
 set-option -g status-position top
-
-# Status bar color
 set-option -g status-bg colour236
 set-option -g status-fg white
-
-# Window status
 set-option -g window-status-format "#I:#W"
 set-option -g window-status-current-format "#[bg=colour238] #I:#W "
 set-option -g window-status-separator " "
 set-option -g status-justify centre
-
-# Left side of status bar
 set -g status-left-length 40 # default is 30
 set -g status-left " Sess: #S / CPU: #{sysstat_cpu} / Mem: #{sysstat_mem} "
-
-# Right side of status bar
 set -g status-right "#{prefix_highlight}%a %b %d / %I:%M %p / Batt: #{battery_percentage} "
-
-# System stats config
-set -g @sysstat_cpu_view_tmpl "#{cpu.pused}"
-set -g @sysstat_mem_view_tmpl "#{mem.pused}"
-
-# tmux-prefix-highlight
-set -g @prefix_highlight_bg default
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
 
 # Pane border
 set -g pane-border-fg colour240
@@ -67,26 +45,32 @@ bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
 bind v split-window -h -c "#{pane_current_path}"
 
+# System stats config
+set -g @sysstat_cpu_view_tmpl "#{cpu.pused}"
+set -g @sysstat_mem_view_tmpl "#{mem.pused}"
+
+# tmux-prefix-highlight
+set -g @prefix_highlight_bg default
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+
 # Configure the default shell
 set -g default-shell $SHELL
 
 # Use vi(m) key bindings
 setw -g mode-keys vi
-set -g status-keys vi
 
 # Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
-bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 
 # Plugins
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-
-# Initialize and run tpm
 run "~/.tmux/plugins/tpm/tpm"
