Hold position in mouse copy

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,6 +63,7 @@ setw -g mode-keys vi
 # Enter copy-mode with vim key bindings
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -T copy-mode-vi Enter
