--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -125,48 +125,63 @@ render_timer: false
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Snazzy)
+# # Colors (Snazzy)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x282a36'
+#     foreground: '0xeff0eb'
+#
+#   # Normal colors
+#   normal:
+#     black:   '0x282a36'
+#     red:     '0xff5c57'
+#     green:   '0x5af78e'
+#     yellow:  '0xf3f99d'
+#     blue:    '0x57c7ff'
+#     magenta: '0xff6ac1'
+#     cyan:    '0x9aedfe'
+#     white:   '0xf1f1f0'
+#
+#   # Bright colors
+#   bright:
+#     black:   '0x686868'
+#     red:     '0xff5c57'
+#     green:   '0x5af78e'
+#     yellow:  '0xf3f99d'
+#     blue:    '0x57c7ff'
+#     magenta: '0xff6ac1'
+#     cyan:    '0x9aedfe'
+#     white:   '0xf1f1f0'
+
+# Colors (Tender)
 colors:
   # Default colors
   primary:
-    background: '0x282a36'
-    foreground: '0xeff0eb'
+    background: '0x282828'
+    foreground: '0xeeeeee'
 
   # Normal colors
   normal:
-    black:   '0x282a36'
-    red:     '0xff5c57'
-    green:   '0x5af78e'
-    yellow:  '0xf3f99d'
-    blue:    '0x57c7ff'
-    magenta: '0xff6ac1'
-    cyan:    '0x9aedfe'
-    white:   '0xf1f1f0'
+    black:   '0x282828'
+    red:     '0xf43753'
+    green:   '0xc9d05c'
+    yellow:  '0xffc24b'
+    blue:    '0xb3deef'
+    magenta: '0xd3b987'
+    cyan:    '0x73cef4'
+    white:   '0xeeeeee'
 
   # Bright colors
   bright:
-    black:   '0x686868'
-    red:     '0xff5c57'
-    green:   '0x5af78e'
-    yellow:  '0xf3f99d'
-    blue:    '0x57c7ff'
-    magenta: '0xff6ac1'
-    cyan:    '0x9aedfe'
-    white:   '0xf1f1f0'
-
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  dim:
-    black:   '0x333333'
-    red:     '0xf2777a'
-    green:   '0x99cc99'
-    yellow:  '0xffcc66'
-    blue:    '0x6699cc'
-    magenta: '0xcc99cc'
-    cyan:    '0x66cccc'
-    white:   '0xdddddd'
+    black:   '0x4c4c4c'
+    red:     '0xf43753'
+    green:   '0xc9d05c'
+    yellow:  '0xffc24b'
+    blue:    '0xb3deef'
+    magenta: '0xd3b987'
+    cyan:    '0x73cef4'
+    white:   '0xfeffff'
 
   # Indexed Colors
   #
